# ChangeLog for www-apps/sitebar
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/sitebar/ChangeLog,v 1.7 2005/08/24 02:46:54 hparker Exp $

  24 Aug 2005; Homer Parker <hparker@gentoo.org> sitebar-3.3.3.ebuild:
  Marked ~amd64.

  22 Aug 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt:
  Housekeeping

  22 Aug 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
  sitebar-3.3.3.ebuild:
  Housekeeping

*sitebar-3.3.3 (03 Jul 2005)

  03 Jul 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
  +sitebar-3.3.3.ebuild:
  Version bump, closes #94332

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  sitebar-3.2.6.ebuild:
  Masked sitebar-3.2.6.ebuild stable for ppc

  31 Aug 2004; David Holm <dholm@gentoo.org> sitebar-3.2.6.ebuild:
  Added to ~ppc.

*sitebar-3.2.6 (18 Aug 2004)

  18 Aug 2004; Renat Lumpau <rl03@gentoo.org> +metadata.xml,
  +files/postinstall-en.txt, +sitebar-3.2.6.ebuild:
  Initial ebuild (bugs #29841 and #53490)
