@@ -1,0 +1,5 @@
+MD5 f57ee9cf6b6749d8528c93046833434b joomla-1.0.1.ebuild 2970
+MD5 40b8fc848d988a716d1fd9c71c3d6e75 ChangeLog 377
+MD5 f61bfa064e3acdfcd826e4a38b121196 metadata.xml 161
+MD5 c81ce886a23ab451a7c1a3e0a4b1984d files/postinstall-en.txt 830
+MD5 aab606d225591bb796c9ba39b0c72192 files/digest-joomla-1.0.1 72
